recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:10: error: not enough arguments for method subtree: (steps: Int, length: Double, angle: Double, shrink: Double)Unit.
Unspecified value parameters steps, length, angle, ...
    return subtree()
                  ^Tree:10: error: not enough arguments for method subtree: (steps: Int, length: Double, angle: Double, shrink: Double)Unit.
Unspecified value parameters steps, length, angle, ...
    return subtree()
                  ^Tree:10: warning: enclosing method tree has result type Unit: return value discarded
    return subtree()
    ^